# ChatGPTerminator

./: .gitignore  ChatGPTerminator.py  Dockerfile  GPTerminator.py  LICENSE.md  README.md  TODO.md  apienv.sh  config.ini  config.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tmp.py  todo.txt
.github/workflows/: codeql.yml  publish-to-test-pypi.yml  pylint.yml  python-publish.yml
chatlog/: 2023-03-13_16-44-37.txt
gpterminator/: GPTerminator.py  __main__.py
