[metadata]
name = gpterminator
version = 0.1.4
author = Aiden Olsen
description = See https://github.com/AineeJames/ChatGPTerminator for more details!
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
url = https://github.com/AineeJames/ChatGPTerminator
keywords = chatgpt cli python
project_urls =
    Documentation = https://github.com/AineeJames/ChatGPTerminator

[options]
packages = gpterminator
install_requires = 
  inquirer==3.1.3
  openai==0.27.2
  prompt_toolkit==3.0.38
  pyperclip==1.8.2
  rich==13.3.2
  tiktoken==0.3.1

[options.entry_points]
console_scripts =
  gpterm = gpterminator.__main__:main

